--- a/public/css/colors/pink-style.css
+++ b/public/css/colors/pink-style.css
@@ -20,7 +20,7 @@ a:hover, a:focus {
 }
 
 .btn::after, .btn::before {
-  background: #44ce6f;
+  background: #04597F;
 }
 
 .owl-theme .owl-dots .owl-dot:hover span, .owl-theme .owl-dots .owl-dot.active span {
@@ -79,7 +79,7 @@ a:hover, a:focus {
   background: #FF1494;
 }
 .startp-nav nav .others-option .btn.btn-primary {
-  background: #44ce6f;
+  background: #04597F;
   box-shadow: 0 13px 27px 0 rgba(68, 206, 111, 0.25);
 }
 .startp-nav nav .others-option .btn.btn-primary::after, .startp-nav nav .others-option .btn.btn-primary::before {
@@ -101,7 +101,7 @@ a:hover, a:focus {
   background: #FF1494;
 }
 .others-option-for-responsive .option-inner .others-option .btn.btn-primary {
-  background: #44ce6f;
+  background: #04597F;
   box-shadow: 0 13px 27px 0 rgba(68, 206, 111, 0.25);
 }
 .others-option-for-responsive .option-inner .others-option .btn.btn-primary::after, .others-option-for-responsive .option-inner .others-option .btn.btn-primary::before {
@@ -143,7 +143,7 @@ a:hover, a:focus {
   background: #FF1494;
   color: #ffffff;
 }
-.single-features:hover .icon.bg-c679e3 {
+.single-features:hover .icon.bg-6FCEEF {
   background: #FF1494;
 }
 .single-features:hover .icon.bg-eb6b3d {
@@ -162,7 +162,7 @@ a:hover, a:focus {
 }
 
 .single-team .team-content ul li a {
-  color: #44ce6f;
+  color: #04597F;
 }
 .single-team .team-content ul li a:hover {
   color: #FF1494;
@@ -186,7 +186,7 @@ a:hover, a:focus {
   background: #FF1494;
 }
 .contact-cta-box .btn-primary {
-  background: #44ce6f;
+  background: #04597F;
   box-shadow: 0 13px 27px 0 rgba(68, 206, 111, 0.25);
 }
 .contact-cta-box .btn-primary:hover, .contact-cta-box .btn-primary:focus {
@@ -200,7 +200,7 @@ a:hover, a:focus {
   color: #FF1494;
 }
 .pricing-table.active-plan .btn-primary {
-  background: #44ce6f;
+  background: #04597F;
   box-shadow: 0 13px 27px 0 rgba(68, 206, 111, 0.25);
 }
 .pricing-table.active-plan .btn-primary::after, .pricing-table.active-plan .btn-primary::before {
@@ -212,7 +212,7 @@ a:hover, a:focus {
   color: #FF1494;
 }
 .single-pricing-table.active-plan .btn-primary {
-  background: #44ce6f;
+  background: #04597F;
   box-shadow: 0 13px 27px 0 rgba(68, 206, 111, 0.25);
 }
 .single-pricing-table.active-plan .btn-primary::after, .single-pricing-table.active-plan .btn-primary::before {
@@ -224,14 +224,14 @@ a:hover, a:focus {
   background-color: #FF1494;
 }
 .domain-search-content form button:hover, .domain-search-content form button:focus {
-  background-color: #44ce6f;
+  background-color: #04597F;
 }
 
 .feedback-slides .client-feedback .single-feedback .client-img img {
   border-color: #FF1494;
 }
 .feedback-slides .client-feedback .single-feedback span {
-  color: #44ce6f;
+  color: #04597F;
 }
 .feedback-slides .client-thumbnails .item .img-fill img {
   border-color: #FF1494;
@@ -256,14 +256,14 @@ a:hover, a:focus {
   border-color: #FF1494;
 }
 .single-feedback-item .client-info .title span {
-  color: #44ce6f;
+  color: #04597F;
 }
 
 .ready-to-talk {
   background: linear-gradient(135deg, #e36cd9 0%, #fe60ae 100%);
 }
 .ready-to-talk .btn-primary {
-  background: #44ce6f;
+  background: #04597F;
 }
 
 .single-blog-post .blog-image .date {
@@ -290,7 +290,7 @@ a:hover, a:focus {
   background: #FF1494;
 }
 #productsModalCenter .modal-content .products-content form button:hover, #productsModalCenter .modal-content .products-content form button:focus {
-  background-color: #44ce6f;
+  background-color: #04597F;
 }
 
 .products-details .availability span {
@@ -303,17 +303,17 @@ a:hover, a:focus {
   background: #FF1494;
 }
 .products-details form button:hover, .products-details form button:focus {
-  background-color: #44ce6f;
+  background-color: #04597F;
 }
 .products-details form .add-to-wishlist-btn:hover, .products-details form .add-to-wishlist-btn:focus {
-  background-color: #44ce6f;
-  border-color: #44ce6f;
+  background-color: #04597F;
+  border-color: #04597F;
 }
 .products-details form .buy-btn {
   margin-top: 20px;
 }
 .products-details form .buy-btn .btn-primary {
-  background: #44ce6f;
+  background: #04597F;
   box-shadow: 0 13px 27px 0 rgba(198, 121, 227, 0.25);
 }
 .products-details form .buy-btn .btn-primary::after, .products-details form .buy-btn .btn-primary::before {
@@ -375,7 +375,7 @@ a:hover, a:focus {
   color: #FF1494;
 }
 .blog-details-desc .article-content .entry-meta ul li svg {
-  color: #44ce6f;
+  color: #04597F;
 }
 .blog-details-desc .article-content .entry-meta ul li::before {
   background: #FF1494;
@@ -384,7 +384,7 @@ a:hover, a:focus {
   color: #FF1494;
 }
 .blog-details-desc .article-footer .article-tags a {
-  background-color: #44ce6f;
+  background-color: #04597F;
 }
 .blog-details-desc .article-footer .article-tags a:hover {
   background-color: #FF1494;
@@ -404,7 +404,7 @@ a:hover, a:focus {
   background: #FF1494;
 }
 .comments-area .comment-respond .form-submit input:hover, .comments-area .comment-respond .form-submit input:focus {
-  background-color: #44ce6f;
+  background-color: #04597F;
 }
 
 .prev-link-wrapper a:hover .prev-link-info-wrapper {
@@ -435,7 +435,7 @@ blockquote::after, .blockquote::after {
   background-color: #FF1494;
 }
 .widget-area .widget_search form button:hover {
-  background-color: #44ce6f;
+  background-color: #04597F;
 }
 .widget-area .widget_recent_entries ul li::before {
   background: #FF1494;
@@ -491,7 +491,7 @@ blockquote::after, .blockquote::after {
 }
 
 .coming-soon-area .social-list li a {
-  background: #44ce6f;
+  background: #04597F;
 }
 .coming-soon-area .social-list li a:hover, .coming-soon-area .social-list li a:focus {
   background-color: #FF1494;
@@ -501,10 +501,10 @@ blockquote::after, .blockquote::after {
   background-color: #FF1494;
 }
 .coming-soon-content form .submit-btn:hover, .coming-soon-content form .submit-btn:focus {
-  background: #44ce6f;
+  background: #04597F;
 }
 .coming-soon-content #timer div {
-  color: #44ce6f;
+  color: #04597F;
 }
 
 .cta-area {
@@ -512,7 +512,7 @@ blockquote::after, .blockquote::after {
 }
 
 .cta-right-content .buy-btn .btn-primary {
-  background: #44ce6f;
+  background: #04597F;
   box-shadow: 0 13px 27px 0 rgba(198, 121, 227, 0.25);
 }
 .cta-right-content .buy-btn .btn-primary::after, .cta-right-content .buy-btn .btn-primary::before {
@@ -520,7 +520,7 @@ blockquote::after, .blockquote::after {
   box-shadow: 0 13px 27px 0 rgba(68, 206, 111, 0.25);
 }
 .cta-right-content .buy-btn .btn-primary:hover, .cta-right-content .buy-btn .btn-primary:focus {
-  color: #44ce6f;
+  color: #04597F;
 }
 
 .repair-about-content .sub-title {
@@ -568,7 +568,7 @@ blockquote::after, .blockquote::after {
   border-color: #FF1494;
 }
 .single-repair-feedback .client-img span {
-  color: #44ce6f;
+  color: #04597F;
 }
 
 .iot-banner-content span {
@@ -604,7 +604,7 @@ blockquote::after, .blockquote::after {
 }
 
 .section-title .sub-title {
-  color: #44ce6f;
+  color: #04597F;
   background-color: #d4f7df;
 }
 
@@ -613,10 +613,10 @@ blockquote::after, .blockquote::after {
   box-shadow: 5px 5px 5px #fdb2db;
 }
 .btn.btn-secondary::before {
-  background: #44ce6f;
+  background: #04597F;
 }
 .btn.btn-secondary::after {
-  background: #44ce6f;
+  background: #04597F;
 }
 .btn.btn-secondary:not(:disabled):not(.disabled).active, .btn.btn-secondary:not(:disabled):not(.disabled):active, .show > .btn.btn-secondary.dropdown-toggle {
   background-color: #FF1494;
@@ -630,7 +630,7 @@ blockquote::after, .blockquote::after {
 }
 
 .ml-about-content .sub-title {
-  color: #44ce6f;
+  color: #04597F;
   background-color: #d4f7df;
 }
 .ml-about-content .bar {
@@ -652,7 +652,7 @@ blockquote::after, .blockquote::after {
 }
 
 .single-ml-feedback-item .client-info span {
-  color: #44ce6f;
+  color: #04597F;
 }
 
 .ml-feedback-slides .owl-dots .owl-dot span::before {
@@ -671,14 +671,14 @@ blockquote::after, .blockquote::after {
   background-color: #FF1494;
 }
 .free-trial-content form button:hover {
-  background-color: #44ce6f;
+  background-color: #04597F;
 }
 
 .single-ml-projects-box .plus-icon a {
   background-color: #FF1494;
 }
 .single-ml-projects-box .plus-icon a:hover {
-  background-color: #44ce6f;
+  background-color: #04597F;
 }
 
 .ml-projects-slides.owl-theme .owl-dots .owl-dot span::before {
@@ -696,7 +696,7 @@ blockquote::after, .blockquote::after {
 }
 
 .agency-about-content .sub-title {
-  color: #44ce6f;
+  color: #04597F;
   background-color: #d4f7df;
 }
 .agency-about-content .bar {
@@ -712,7 +712,7 @@ blockquote::after, .blockquote::after {
 }
 
 .single-testimonials-item .client-info span {
-  color: #44ce6f;
+  color: #04597F;
 }
 
 .single-blog-post-item .post-content .post-meta li a:hover {
@@ -730,10 +730,10 @@ blockquote::after, .blockquote::after {
   color: #FF1494;
 }
 .single-footer-widget ul.social-links li a {
-  border-color: #44ce6f;
+  border-color: #04597F;
 }
 .single-footer-widget ul.social-links li a:hover {
-  background: #44ce6f;
+  background: #04597F;
   color: #ffffff;
 }
 
@@ -741,7 +741,7 @@ blockquote::after, .blockquote::after {
   background-color: #FF1494;
 }
 .go-top:hover {
-  background: #44ce6f;
+  background: #04597F;
 }
 
 .agency-portfolio-home-slides.owl-theme .owl-nav [class*=owl-]:hover {
@@ -761,7 +761,7 @@ blockquote::after, .blockquote::after {
   color: #FF1494;
 }
 .navbar-color-white .startp-nav nav .others-option .btn.btn-primary {
-  background: #44ce6f;
+  background: #04597F;
   box-shadow: 0 13px 27px 0 rgba(68, 206, 111, 0.25);
 }
 .navbar-color-white .startp-nav nav .others-option .btn.btn-primary::after, .navbar-color-white .startp-nav nav .others-option .btn.btn-primary::before {
