--- a/public/css/colors/pink-style.scss
+++ b/public/css/colors/pink-style.scss
@@ -1,6 +1,6 @@
 // Pink CSS
 
-$light-green-color: #44ce6f;
+$light-green-color: #04597F;
 $white-color: #ffffff;
 $black-color: #0e314c;
 $navlink-color: #4a6f8a;
@@ -253,7 +253,7 @@ a {
             background: $pink-color;
             color: $white-color;
 
-            &.bg-c679e3 {
+            &.bg-6FCEEF {
                 background: $pink-color;
             }
             &.bg-eb6b3d {
