--- a/public/css/colors/purple-style.scss
+++ b/public/css/colors/purple-style.scss
@@ -1,11 +1,11 @@
 // Purple CSS
 
-$light-green-color: #44ce6f;
+$light-green-color: #04597F;
 $white-color: #ffffff;
 $black-color: #0e314c;
 $navlink-color: #4a6f8a;
 $paragraph-color: #6084a4;
-$purple-color: #c679e3;
+$purple-color: #6FCEEF;
 $bg-color: #f7fafd;
 $bg-color2: #f9f6f6;
 $hosting-main-color: #032b8d;
@@ -253,7 +253,7 @@ a {
             background: $purple-color;
             color: $white-color;
 
-            &.bg-c679e3 {
+            &.bg-6FCEEF {
                 background: $purple-color;
             }
             &.bg-eb6b3d {
